Fixed issue with price visible only on selection in group of request.
Workitems:
#11898 24S Testing - Negotiation page - Total calculation is not visible
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C18356

--- a/ShipTech10/app/css/custom.css
+++ b/ShipTech10/app/css/custom.css
@@ -3402,6 +3402,7 @@ Uncomment to see border around all .col-*
 				overflow: hidden;
 				padding: 0px !important;
 				color: transparent;
+			    text-indent: 99999px;
 			}
             confirm-order-dialog {
                 top: 0!important;
